src/components/common/home/HomeFeed/index.css
.Home {
  height: 100vh;
  display: flex;
  flex-flow: nowrap column;
  justify-content: center;
  align-items: center;
  color: white;
}

.Home__picture {
  width: 16rem;
  margin-bottom: 1.125em;
}

.Home__picture img {
  display: block;
  margin: 0;
  width: 100%;
}

.Home__subtitle {
  opacity: 0.85;
  margin: 0;
  margin-bottom: 1em;
}

.Home form {
  margin-bottom: 2em;
  width: 100%;
  max-width: 40rem;
}

.Home__searches {
  max-width: 80rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 0.25em 1em;
  margin-inline: auto;
}

.Home__searches a {
  font-size: 0.875em;
  color: var(--font-color);
  text-decoration: underline;
  animation: fadeIn 240ms linear;
}

.Home__searches a:hover {
  color: var(--primary-color);
}

